--- a/build.xml
+++ b/build.xml
@@ -53,6 +53,7 @@
     <pathelement location="${processing}/core/library/jogl-all-natives-${nativeOpenGL}.jar" />
 
     <!-- Libs imports -->
+    <pathelement location="${lib}/peasycam.jar" />
     <pathelement location="${lib}/junit-4.12.jar" />
     <pathelement location="${lib}/hamcrest-core-1.3.jar" />
 
@@ -86,7 +87,7 @@
 
   <!-- Run the project -->
   <target name="run" depends="compile">
-    <java fork="true" classname="geom.ch3d.Main">
+    <java fork="true" classname="ch3d.Main">
       <classpath refid="project.classpath" />
     </java>
   </target>
